--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   
   <!-- Tailwind CSS (CDN) -->
-  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="dist/output.css" rel="stylesheet">
 
   <!-- Google Fonts: Inter + Outfit for headers -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -1306,3 +1306,4 @@
   </script>
 </body>
 </html>
+
