--- a/relationshipp.html
+++ b/relationshipp.html
@@ -608,10 +608,9 @@
 
     function handleAppClick(e) {
       if (e.target.id === 'nav-home') {
-        // Reset the app state for a true 'home' navigation
-        retest(true); // pass true to prevent navigation
-        setPage('home');
-        return;
+    // This line tells the browser to load the index.html page
+    window.location.href = 'index.html'; 
+    return;
       }
       if (e.target.id === 'nav-about') {
         setPage('about');
@@ -1392,4 +1391,5 @@
   </script>
 </body>
 </html>
+
 
