--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   
   <!-- Tailwind CSS (CDN) -->
   <link href="dist/output.css" rel="stylesheet">
+  <link rel="icon" href="logo.png" type="image/png" />
 
   <!-- Google Fonts: Inter + Outfit for headers -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -1296,5 +1297,6 @@
   </script>
 </body>
 </html>
+
 
 
